--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Jul 29 10:51:34 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* proc.c (env_write): remove unused function.
+
 Fri Jul 29 10:49:52 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_core.h (VM_LOCAL_P): should return an integer value.
