* string.c (String#downcase), NEWS: Mentioned that case mapping for all   of ISO-8859-1~16 is now supported. [ci skip]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55777 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jul 30 12:13:26 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* string.c (String#downcase), NEWS: Mentioned that case mapping for all
+	  of ISO-8859-1~16 is now supported. [ci skip]
+
 Sat Jul 30 12:00:01 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* enc/iso_8859_2.c, test/ruby/enc/test_case_comprehensive.rb:
