Object#clone with freeze: false [Feature #12300]
	* object.c (rb_obj_clone2): Allow Object#clone to take freeze:
	  false keyword argument to not freeze the clone.
  	  [ruby-core:75017][Feature #12300]

 	* test/ruby/test_object.rb (TestObject): test for it.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55786 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Aug  1 14:50:06 2016  Jeremy Evans <code@jeremyevans.net>
+
+	* object.c (rb_obj_clone2): Allow Object#clone to take freeze:
+	  false keyword argument to not freeze the clone.
+	  [ruby-core:75017][Feature #12300]
+
+	* test/ruby/test_object.rb (TestObject): test for it.
+
 Mon Aug  1 12:16:19 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* ext/json/*, test/json/json_parser_test.rb: Update json-2.0.2.
