extmk.rb: build gems
* ext/extmk.rb: [EXPERIMENTAL] build extension libraries in
  extracted gems.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55789 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug  1 21:39:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/extmk.rb: [EXPERIMENTAL] build extension libraries in
+	  extracted gems.
+
 Mon Aug  1 16:07:18 2016  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* include/ruby/ruby.h (struct RStruct): no longer.
