--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug  2 12:37:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/option.c, ext/socket/rubysocket.h (inet_ntop): share
+	  the fallback definition.  [ruby-core:76646] [Bug #12645]
+
 Tue Aug  2 04:07:29 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (set_pioinfo_extra): use more reliable way to search
