NEWS: Kernel#clone [ci skip]
* NEWS (Kernel#clone): mention freeze flag.  [Feature #12300]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55809 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/NEWS
+++ b/NEWS
@@ -61,6 +61,11 @@ with all sufficient information, see the ChangeLog file or Redmine
 
   * Integer#digits for extracting columns of place-value notation [Feature #12447]
 
+* Kernel
+
+  * Kernel#clone now takes an optional keyword argument, freeze flag.
+    [Feature #12300]
+
 * Regexp
 
   * Regexp#match? [Feature #8110]
