--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug  5 23:18:35 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* hasn.c (env_str_new): taint the string.  get rid of a test failure
+	  introduced at r55811.
+
 Fri Aug  5 17:04:02 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* hash.c (w32_getenv): call rb_w32_getenv and rb_w32_ugetenv via
