--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Sat Aug  6 00:39:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* hash.c (env_enc_str_new): make string for an environment
+	  variable name or value.
+
+	* hash.c (env_name_new): make environment value string with the
+	  encoding for its name.
+
 Fri Aug  5 23:18:35 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* hasn.c (env_str_new): taint the string.  get rid of a test failure
