--- a/ChangeLog
+++ b/ChangeLog
@@ -25,7 +25,7 @@ Sat Aug  6 00:39:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 Fri Aug  5 23:18:35 2016  NAKAMURA Usaku  <usa@ruby-lang.org>
 
-	* hasn.c (env_str_new): taint the string.  get rid of a test failure
+	* hash.c (env_str_new): taint the string.  get rid of a test failure
 	  introduced at r55811.
 
 Fri Aug  5 17:04:02 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
