--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Aug  8 20:56:46 2016  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/sample/excel1.rb, ext/win32ole/sample/excel2.rb,
+	  ext/win32ole/sample/excel3.rb, ext/win32ole/sample/ie.rb,
+	  ext/win32ole/sample/ienavi.rb, ext/win32ole/sample/ienavi2.rb: use
+	  true instead of deprecated TRUE. [ci skip]
+
 Mon Aug  8 12:51:12 2016  Zarko Todorovski <zarko@ca.ibm.com>
 
 	* internal.h (RBASIC_CLEAR_CLASS): Reroute ANSI C's strict
