--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug  9 16:09:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* vm_insnhelper.c (vm_getivar): use always_inline because
+	  gcc7 doesn't inline this without always_inline.
+
 Tue Aug  9 15:41:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/tk: Tk is removed from stdlib.  [Feature #8539]
