--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Aug  9 17:50:00 2016  Kenta Murata  <mrkn@mrkn.jp>
+
+	* hash.c (rb_hash_map_v, rb_hash_map_v_bang): impelement Hash#map_v and
+	  Hash#map_v! [Feature #12512] [ruby-core:76095]
+
+	* test/ruby/test_hash.rb: add tests for above change.
+
 Tue Aug  9 16:09:03 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* vm_insnhelper.c (vm_getivar): use always_inline because
