--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Wed Aug 10 15:35:03 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/win32/resolv/resolv.c: needs windows.h for iphlpapi.h on
+	  cygwin.  [ruby-core:76791] [Bug #12663]
+
+	* ext/win32/resolv/resolv.c (w32error_make_error): use
+	  Win32::Resolv::Error, an alias of Win32::Registry::Error.
+
 Tue Aug  9 17:50:00 2016  Kenta Murata  <mrkn@mrkn.jp>
 
 	* hash.c (rb_hash_map_v, rb_hash_map_v_bang): impelement Hash#map_v and
