--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Aug 10 22:37:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (command_rhs, arg_rhs): introduce new rules to reduce
+	  repeated rules with rescue modifier.
+
 Wed Aug 10 17:26:43 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (command_asgn): rescue modifier in command assignment
