--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Aug 11 16:24:23 2016  nerdinand  <nerdinand@nerdinand.com>
+
+	* compar.c (cmp_clamp): Introduce Comparable#clamp.  [Feature #10594]
+
 Thu Aug 11 03:16:59 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
 
 	* lib/prime.rb: Optimize prime?
