ChangeLog: fix name in r55863 [ci skip]
* ChangeLog: fix the original patch author's name to the name
  written in the patch, not "author name" in git.
  [Feature #10594]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55879 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Fri Aug 12 12:50:31 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 	  message to the beginning, not after file name and line number.
 	  [Feature #11951]
 
-Thu Aug 11 16:24:23 2016  nerdinand  <nerdinand@nerdinand.com>
+Thu Aug 11 16:24:23 2016  Ferdinand Niedermann  <nerdinand@nerdinand.com>
 
 	* compar.c (cmp_clamp): Introduce Comparable#clamp.  [Feature #10594]
 
