* object.c (InitVM_Object): Update referenced document path.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55894 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug 14 14:54:14 2016  Kouhei Sutou  <kou@cozmixng.org>
+
+	* object.c (InitVM_Object): Update referenced document path.
+
 Sat Aug 13 23:08:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* numeric.c (num_funcall0, num_funcall1): get rid of infinite
