extmk.rb: no static-ext in gems
* ext/extmk.rb (extmake): extension libraries in gems cannot link
  statically.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55899 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug 15 11:46:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/extmk.rb (extmake): extension libraries in gems cannot link
+	  statically.
+
 Sun Aug 14 22:35:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* id_table.c (hash_table_extend): should not shrink the table than
