--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug 15 20:31:34 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* node.c (dump_array): show nd_alen field in NODE_ARRAY only in
+	  the first node.  it is nd_end in the rest nodes.
+
 Mon Aug 15 16:41:32 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* appveyor.yml: Update libressl version to 2.3.7.
