--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 16 21:04:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (UNICODE_HDR_DIR): separate unicode header files from
+	  unicode data files.  [ruby-core:76879] [Bug #12677]
+
 Tue Aug 16 11:17:51 2016  Koichi ITO  <koic.ito@gmail.com>
 
 	* lib/net/http/header.rb: Fix typo. [ci skip][fix GH-1407]
