* proc.c (mnew_missing): Remove an unused argument.   After r51126 rid is not used.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55962 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 19 01:00:53 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>
+
+	* proc.c (mnew_missing): Remove an unused argument.
+	  After r51126 rid is not used.
+
 Thu Aug 18 09:26:52 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* gems/bundled_gems: bump to test-unit-3.2.1
