--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 19 09:12:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (vm_set_main_stack): TOPLEVEL_BINDING must be built.
+	  http://www.viva64.com/en/b/0414/#ID0EQ1CI  [ruby-core:76973]
+
 Fri Aug 19 01:00:53 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>
 
 	* proc.c (mnew_missing): Remove an unused argument.
